# ori-code-editor-tui

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
.mimocode/: .cron-lock
assets/: config.example.toml
crates/oride/: Cargo.toml
crates/oride-app/: Cargo.toml
crates/oride-app/src/: app.rs  browser.rs  clipboard.rs  disk_watch.rs  find.rs  jump_list.rs  lib.rs  menus.rs  mouse.rs  run.rs  session.rs  split.rs  terminal_guard.rs
crates/oride-config/: Cargo.toml
crates/oride-config/src/: editorconfig.rs  lib.rs  load.rs  model.rs
crates/oride-core/: Cargo.toml
crates/oride-core/src/: buffer.rs  document.rs  lib.rs  position.rs  selection.rs  undo.rs
crates/oride-fs/: Cargo.toml
crates/oride-fs/src/: icons.rs  lib.rs  tree.rs
crates/oride-git/: Cargo.toml
crates/oride-git/src/: lib.rs
crates/oride-keymap/: Cargo.toml
crates/oride-keymap/src/: action.rs  chord.rs  lib.rs  map.rs
crates/oride-lsp/: Cargo.toml
crates/oride-lsp/src/: client.rs  lib.rs  protocol.rs  types.rs
crates/oride-plugin/: Cargo.toml
crates/oride-plugin/src/: host.rs  language.rs  lib.rs  plugin.rs
crates/oride-search/: Cargo.toml
crates/oride-search/src/: lib.rs  ripgrep.rs  walk.rs
crates/oride-syntax/: Cargo.toml
crates/oride-syntax/src/: highlight.rs  kind.rs  language.rs  lib.rs  markdown.rs  md_preview.rs
crates/oride-terminal/: Cargo.toml
crates/oride-terminal/src/: lib.rs
crates/oride-ui/: Cargo.toml
crates/oride-ui/src/: chrome.rs  color.rs  editor.rs  lib.rs  md_preview.rs  palette.rs  status.rs  tabs.rs  terminal_panel.rs  theme.rs  tree.rs
crates/oride/src/: main.rs
crates/tree-sitter-oriscript/: Cargo.toml  build.rs
crates/tree-sitter-oriscript/src/: grammar.json  lib.rs  node-types.json  parser.c
docs/: config.md  design.md  markdown.md  plugin-api.md  polish.md  syntax.md
docs/planning/: alpha6-roadmap.md  post-0.1-roadmap.md  ux-polish-plan.md
scripts/: install.sh
