[workspace]
resolver = "2"
members = [
    "crates/oride-core",
    "crates/oride-config",
    "crates/oride-keymap",
    "crates/oride-fs",
    "crates/oride-git",
    "crates/oride-terminal",
    "crates/oride-syntax",
    "crates/tree-sitter-oriscript",
    "crates/oride-lsp",
    "crates/oride-search",
    "crates/oride-ui",
    "crates/oride-app",
    "crates/oride",
]
default-members = ["crates/oride"]

[workspace.package]
version = "0.1.0-alpha.5"
edition = "2021"
license = "MIT"
repository = "https://github.com/raillen/ori-code-editor-tui"
authors = ["raillen"]
rust-version = "1.80"

[workspace.dependencies]
oride-core = { path = "crates/oride-core" }
oride-config = { path = "crates/oride-config" }
oride-keymap = { path = "crates/oride-keymap" }
oride-fs = { path = "crates/oride-fs" }
oride-git = { path = "crates/oride-git" }
oride-terminal = { path = "crates/oride-terminal" }
oride-syntax = { path = "crates/oride-syntax" }
oride-ui = { path = "crates/oride-ui" }
oride-app = { path = "crates/oride-app" }
oride-lsp = { path = "crates/oride-lsp" }
oride-search = { path = "crates/oride-search" }
tree-sitter-oriscript = { path = "crates/tree-sitter-oriscript" }
serde_json = "1"
regex = "1"
notify = "7"
ropey = "1.6"
thiserror = "2"
anyhow = "1"
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
tempfile = "3"
portable-pty = "0.8"
strip-ansi-escapes = "0.2"
tree-sitter = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
tree-sitter-md = "0.3"
arboard = "3"
base64 = "0.22"
