[package]
name = "oride-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Oride application event loop and composition"
rust-version.workspace = true

[dependencies]
oride-core = { workspace = true }
oride-ui = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
