[package]
name = "oride-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Oride application event loop and composition"
rust-version.workspace = true

[dependencies]
oride-core = { workspace = true }
oride-config = { workspace = true }
oride-keymap = { workspace = true }
oride-ui = { workspace = true }
oride-fs = { workspace = true }
oride-git = { workspace = true }
oride-terminal = { workspace = true }
oride-syntax = { workspace = true }
oride-lsp = { workspace = true }
oride-search = { workspace = true }
oride-plugin = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
arboard = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
notify = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
