[package]
name = "oride-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TOML config load/merge for Oride"
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
