[package]
name = "oride-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Minimal LSP client (stdio JSON-RPC) for Oride"
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
