[package]
name = "oride-search"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Project-wide text search for Oride (ripgrep + Rust fallback)"
rust-version.workspace = true

[dependencies]
regex = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
ignore = "0.4"

[dev-dependencies]
tempfile = { workspace = true }
