[package]
name = "oride-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ratatui widgets and layouts for Oride"
rust-version.workspace = true

[dependencies]
oride-core = { workspace = true }
oride-config = { workspace = true }
oride-fs = { workspace = true }
oride-git = { workspace = true }
ratatui = { workspace = true }
thiserror = { workspace = true }
