[package]
name = "tree-sitter-oriscript"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Tree-sitter grammar for OriScript (vendored for Oride)"
build = "build.rs"
include = ["build.rs", "src/**", "Cargo.toml"]

[lib]
path = "src/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1"

[dev-dependencies]
tree-sitter = "0.25"
